[package]
name = "async_future"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="d5_futures"
path = "src/lib.rs"

[[bin]]
name="d5_server"
path = "src/main.rs"

[dependencies]
failure = "0.1.8"
futures = "0.3.21"
tokio = {version="1.17.0", features=["full"]}
